# oreno-comicbagi-scrap

./: .env-example  README.md  pyproject.toml  requirements.txt
api/: openapi-comicbagi.yaml  openapi-mangadex.yaml
src/comicbagi_scrap/: __init__.py  bot.py  bot_mangadex.py  requirements.txt
